fixed ui issues on mobile screen and code improvements

--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -30,7 +30,10 @@
           border-radius: 3px;
           overflow: hidden;
           box-shadow: 1px 1px 2px;
-          margin-bottom: 2rem;
+
+          @media screen and (max-width: 768px) {
+            margin-bottom: 2rem;
+          }
 
           input {
             width: 100%;
