--- a/components/Scroll/scroll.module.scss
+++ b/components/Scroll/scroll.module.scss
@@ -1,16 +1,20 @@
 .scroll {
   display: flex;
-  // flex-direction: row-reverse;
+  flex-direction: row-reverse;
   grid-gap: 1rem;
   align-items: baseline;
   padding: 1rem 0;
+
+  @media screen and (max-width: 768px) {
+    grid-gap: 0;
+  }
 
   .iconContainer {
     width: 5rem;
     height: 5rem;
     padding: 1.2rem;
     border-radius: 50%;
-    box-shadow: 3px 3px 7px rgba(59, 58, 58, 0.507);
+    box-shadow: 0px 0px 7px rgba(59, 58, 58, 0.507);
 
     @media screen and (max-width: 768px) {
       width: 4rem;
@@ -21,5 +25,9 @@
   .text {
     font-weight: 500;
     opacity: 0.95;
+
+    @media screen and (max-width: 768px) {
+      margin-left: 1rem;
+    }
   }
 }
