--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -211,8 +211,8 @@
           height: 100%;
           padding: 0;
           margin: 0;
-          z-index: 3;
-          transform: scaleX(2.5);
+          z-index: 13;
+          // transform: scaleX(2.5);
           opacity: 0;
           cursor: pointer;
 
@@ -238,10 +238,10 @@
           transition: background .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
           transition-delay: .1s;
 
-          span {
-            width: 100%;
-            height: 100%;
-          }
+          // span {
+          //   width: 100%;
+          //   height: 100%;
+          // }
 
           @media all and (max-width: 768px) {
             width: 5rem;
